[package]
name = "sgtool"
version = "0.0.1-dev"
edition = "2021"
authors = [ "Quentin Rouland <quentin@qrouland.com>" ]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
byteorder = "1.5"
flate2 = "1.0"
quick-protobuf = { version = "0.8", features = ["std"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
